--- a/product-detail.html
+++ b/product-detail.html
@@ -50,7 +50,7 @@
           </button>
 
           <a class="navbar-brand" href="index.html">
-            <strong><span>Little</span> Fashion</strong>
+            <strong><span>Smart</span> Trade</strong>
           </a>
 
           <div class="d-lg-none">
@@ -62,15 +62,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Story</a>
+                <a class="nav-link" href="about.html">Historia</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="products.html">Productos</a>
               </li>
 
               <li class="nav-item">
@@ -78,7 +78,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
 
@@ -98,8 +98,8 @@
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">We provide you</span>
-                <span class="d-block text-dark">Fashionable Stuffs</span>
+                <span class="d-block text-primary">De ti</span>
+                <span class="d-block text-dark">Para ti</span>
               </h1>
             </div>
           </div>
@@ -122,9 +122,9 @@
             <div class="col-lg-6 col-12">
               <div class="product-info d-flex">
                 <div>
-                  <h2 class="product-title mb-0">Tree pot</h2>
+                  <h2 class="product-title mb-0">Coche</h2>
 
-                  <p class="product-p">Original package design from house</p>
+                  <p class="product-p">Coche teledirigido a pedales</p>
                 </div>
 
                 <small class="product-price text-muted ms-auto mt-auto mb-5"
@@ -133,12 +133,9 @@
               </div>
 
               <div class="product-description">
-                <strong class="d-block mt-4 mb-2">Description</strong>
+                <strong class="d-block mt-4 mb-2">Descripción</strong>
 
-                <p class="lead mb-5">
-                  Over three years in business, We’ve had the chance to work on
-                  a variety of projects, with companies
-                </p>
+                <p class="lead mb-5">descecdeded</p>
               </div>
 
               <div class="product-cart-thumb row">
@@ -147,7 +144,7 @@
                     class="form-select cart-form-select"
                     id="inputGroupSelect01"
                   >
-                    <option selected>Quantity</option>
+                    <option selected>Unidades</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -163,127 +160,15 @@
                     data-bs-toggle="modal"
                     data-bs-target="#cart-modal"
                   >
-                    Add to Cart
+                    Añadir al carrito
                   </button>
                 </div>
 
                 <p>
-                  <a href="#" class="product-additional-link">Details</a>
+                  <a href="#" class="product-additional-link">Detalles</a>
 
-                  <a href="#" class="product-additional-link"
-                    >Delivery and Payment</a
-                  >
+                  <a href="#" class="product-additional-link">Pago y Envío</a>
                 </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="related-product section-padding border-top">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <h3 class="mb-5">You might also like</h3>
-            </div>
-
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <span class="product-alert me-auto">New arrival</span>
-
-                  <a href="#" class="bi-heart-fill product-icon"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Tree pot</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Original package design from house</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$25</small
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12 mb-3">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/jordan-nix-CkCUvwMXAac-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <span class="product-alert">Low Price</span>
-
-                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Fashion set</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Costume package</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$35</small
-                  >
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-12">
-              <div class="product-thumb">
-                <a href="product-detail.html">
-                  <img
-                    src="images/product/nature-zen-3Dn1BZZv3m8-unsplash.jpeg"
-                    class="img-fluid product-image"
-                    alt=""
-                  />
-                </a>
-
-                <div class="product-top d-flex">
-                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
-                </div>
-
-                <div class="product-info d-flex">
-                  <div>
-                    <h5 class="product-title mb-0">
-                      <a href="product-detail.html" class="product-title-link"
-                        >Juice Drinks</a
-                      >
-                    </h5>
-
-                    <p class="product-p">Nature made another world</p>
-                  </div>
-
-                  <small class="product-price text-muted ms-auto mt-auto mb-5"
-                    >$45</small
-                  >
-                </div>
               </div>
             </div>
           </div>
