--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
           </button>
 
           <a class="navbar-brand" href="index.html">
-            <strong><span>Little</span> Fashion</strong>
+            <strong><span>Smart</span> Trade</strong>
           </a>
 
           <div class="d-lg-none">
@@ -62,15 +62,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Story</a>
+                <a class="nav-link" href="about.html">Historia</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="products.html">Products</a>
+                <a class="nav-link active" href="products.html">Productos</a>
               </li>
 
               <li class="nav-item">
@@ -78,7 +78,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
 
@@ -98,8 +98,8 @@
           <div class="row">
             <div class="col-lg-10 col-12">
               <h1>
-                <span class="d-block text-primary">Choose your</span>
-                <span class="d-block text-dark">favorite stuffs</span>
+                <span class="d-block text-primary">Productos</span>
+                <span class="d-block text-dark">que aportan</span>
               </h1>
             </div>
           </div>
@@ -110,7 +110,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="mb-5">New Arrivals</h2>
+              <h2 class="mb-5">Productos</h2>
             </div>
 
             <div class="col-lg-4 col-12 mb-3">
@@ -124,9 +124,7 @@
                 </a>
 
                 <div class="product-top d-flex">
-                  <span class="product-alert me-auto">New Arrival</span>
-
-                  <a href="#" class="bi-heart-fill product-icon"></a>
+                  <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
                 </div>
 
                 <div class="product-info d-flex">
@@ -156,8 +154,6 @@
                 </a>
 
                 <div class="product-top d-flex">
-                  <span class="product-alert">Discounted Price</span>
-
                   <a href="#" class="bi-heart-fill product-icon ms-auto"></a>
                 </div>
 
@@ -205,10 +201,6 @@
                   <small class="product-price text-muted ms-auto">$45</small>
                 </div>
               </div>
-            </div>
-
-            <div class="col-12">
-              <h2 class="mb-5">Popular</h2>
             </div>
 
             <div class="col-lg-4 col-12 mb-3">
