--- a/sign-in.html
+++ b/sign-in.html
@@ -39,7 +39,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto col-12">
-              <h1 class="hero-title text-center mb-5">Sign In</h1>
+              <h1 class="hero-title text-center mb-5">Inicio de sesión</h1>
 
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
@@ -55,7 +55,7 @@
                         required
                       />
 
-                      <label for="email">Email address</label>
+                      <label for="email">Dirección email</label>
                     </div>
 
                     <div class="form-floating p-0">
@@ -68,7 +68,7 @@
                         required
                       />
 
-                      <label for="password">Password</label>
+                      <label for="password">Contraseña</label>
                     </div>
 
                     <button
@@ -79,8 +79,8 @@
                     </button>
 
                     <p class="text-center">
-                      Don’t have an account?
-                      <a href="sign-up.html">Create One</a>
+                      No tienes una cuenta?
+                      <a href="sign-up.html">Regístrate</a>
                     </p>
                   </form>
                 </div>
