--- a/sign-up.html
+++ b/sign-up.html
@@ -39,23 +39,23 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-8 mx-auto col-12">
-              <h1 class="hero-title text-center mb-5">Sign Up</h1>
+              <h1 class="hero-title text-center mb-5">Regístrate</h1>
 
               <div class="social-login d-flex flex-column w-50 m-auto">
                 <a href="#" class="btn custom-btn social-btn mb-4">
                   <i class="bi bi-google me-3"></i>
 
-                  Continue with Google
+                  Continúa con Google
                 </a>
 
                 <a href="#" class="btn custom-btn social-btn">
                   <i class="bi bi-facebook me-3"></i>
 
-                  Continue with Facebook
+                  Continúa con Facebook
                 </a>
               </div>
 
-              <div class="div-separator w-50 m-auto my-5"><span>or</span></div>
+              <div class="div-separator w-50 m-auto my-5"><span>o</span></div>
 
               <div class="row">
                 <div class="col-lg-8 col-11 mx-auto">
@@ -71,7 +71,7 @@
                         required
                       />
 
-                      <label for="email">Email address</label>
+                      <label for="email">Dirección email</label>
                     </div>
 
                     <div class="form-floating my-4">
@@ -85,14 +85,12 @@
                         required
                       />
 
-                      <label for="password">Password</label>
+                      <label for="password">Contraseña</label>
 
-                      <p class="text-center">
-                        * shall include 0-9 a-z A-Z in 4 to 10 characters
-                      </p>
+                      <p class="text-center"></p>
                     </div>
 
-                    <div class="form-floating">
+                    <div class="form-floating my-4">
                       <input
                         type="password"
                         name="confirm_password"
@@ -104,20 +102,46 @@
                       />
 
                       <label for="confirm_password"
-                        >Password Confirmation</label
+                        >Confirmación contraseña</label
                       >
+                    </div>
+
+                    <div class="form-floating my-4">
+                      <input
+                        type="address"
+                        name="address1"
+                        id="address1"
+                        class="form-control"
+                        placeholder="línea Dirección 1"
+                        required
+                      />
+
+                      <label for="email">Línea Dirección 1</label>
+                    </div>
+
+                    <div class="form-floating">
+                      <input
+                        type="address"
+                        name="address2"
+                        id="address2"
+                        class="form-control"
+                        placeholder="Línea Dirección 2"
+                        required
+                      />
+
+                      <label for="email">Línea Dirección 2</label>
                     </div>
 
                     <button
                       type="submit"
                       class="btn custom-btn form-control mt-4 mb-3"
                     >
-                      Create account
+                      Regístrate
                     </button>
 
                     <p class="text-center">
-                      Already have an account? Please
-                      <a href="sign-in.html">Sign In</a>
+                      Ya tienes una cuenta? Por favor,
+                      <a href="sign-in.html">Inicia sesión</a>
                     </p>
                   </form>
                 </div>
