--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
           </button>
 
           <a class="navbar-brand" href="index.html">
-            <strong><span>Little</span> Fashion</strong>
+            <strong><span>Smart</span> Trade</strong>
           </a>
 
           <div class="d-lg-none">
@@ -62,15 +62,15 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link active" href="about.html">Story</a>
+                <a class="nav-link active" href="about.html">Historia</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="products.html">Productos</a>
               </li>
 
               <li class="nav-item">
@@ -78,7 +78,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
 
@@ -96,15 +96,15 @@
           <div class="row">
             <div class="col-lg-6 col-12 header-info">
               <h1>
-                <span class="d-block text-primary">Company</span>
-                <span class="d-block text-dark">Fashion</span>
+                <span class="d-block text-primary">Productos</span>
+                <span class="d-block text-dark">Sostenibles</span>
               </h1>
             </div>
           </div>
         </div>
 
         <img
-          src="images/header/businesspeople-meeting-office-working.jpg"
+          src="images/header/business.jpg"
           class="header-image img-fluid"
           alt=""
         />
@@ -114,30 +114,20 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="mb-5">Meet our <span>team</span></h2>
+              <h2 class="mb-5">Nuestro <span>Equipo</span></h2>
             </div>
 
             <div class="col-lg-4 mb-4 col-12">
               <div class="team-thumb d-flex align-items-center">
                 <img
-                  src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg"
+                  src="images/people/45197.png"
                   class="img-fluid custom-circle-image team-image me-4"
                   alt=""
                 />
 
                 <div class="team-info">
-                  <h5 class="mb-0">Don</h5>
-                  <strong class="text-muted">Product, VP</strong>
-
-                  <!-- Button trigger modal -->
-                  <button
-                    type="button"
-                    class="btn custom-modal-btn"
-                    data-bs-toggle="modal"
-                    data-bs-target="#don"
-                  >
-                    <i class="bi-plus-circle-fill"></i>
-                  </button>
+                  <h5 class="mb-0">Marius</h5>
+                  <strong class="text-muted">CEO</strong>
                 </div>
               </div>
             </div>
@@ -145,24 +135,14 @@
             <div class="col-lg-4 mb-4 col-12">
               <div class="team-thumb d-flex align-items-center">
                 <img
-                  src="images/people/portrait-british-woman.jpeg"
+                  src="images\people\15568.png"
                   class="img-fluid custom-circle-image team-image me-4"
                   alt=""
                 />
 
                 <div class="team-info">
-                  <h5 class="mb-0">Kelly</h5>
+                  <h5 class="mb-0">Vinicius</h5>
                   <strong class="text-muted">Marketing</strong>
-
-                  <!-- Button trigger modal -->
-                  <button
-                    type="button"
-                    class="btn custom-modal-btn"
-                    data-bs-toggle="modal"
-                    data-bs-target="#kelly"
-                  >
-                    <i class="bi-plus-circle-fill"></i>
-                  </button>
                 </div>
               </div>
             </div>
@@ -170,24 +150,14 @@
             <div class="col-lg-4 mb-lg-0 mb-4 col-12">
               <div class="team-thumb d-flex align-items-center">
                 <img
-                  src="images/people/beautiful-woman-face-portrait-brown-background.jpeg"
+                  src="images\people\Real_Madrid_C._Ancelotti_002.png"
                   class="img-fluid custom-circle-image team-image me-4"
                   alt=""
                 />
 
                 <div class="team-info">
-                  <h5 class="mb-0">Marie</h5>
-                  <strong class="text-muted">Founder</strong>
-
-                  <!-- Button trigger modal -->
-                  <button
-                    type="button"
-                    class="btn custom-modal-btn"
-                    data-bs-toggle="modal"
-                    data-bs-target="#marie"
-                  >
-                    <i class="bi-plus-circle-fill"></i>
-                  </button>
+                  <h5 class="mb-0">Ancelotti</h5>
+                  <strong class="text-muted">Inversor</strong>
                 </div>
               </div>
             </div>
@@ -200,109 +170,9 @@
           <div class="row">
             <div class="col-lg-9 mx-auto col-11">
               <h2 class="text-center">
-                Customer love, <br />
-                <span>Little</span> Fashion
+                Por nosotros, <br />
+                <span>Para</span> Vosotros
               </h2>
-
-              <div class="slick-testimonial">
-                <div class="slick-testimonial-caption">
-                  <p class="lead">
-                    Over three years in business, We’ve had the chance to work
-                    on a variety of projects, with companies Lorem ipsum dolor
-                    sit amet
-                  </p>
-
-                  <div
-                    class="slick-testimonial-client d-flex align-items-center mt-4"
-                  >
-                    <img
-                      src="images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg"
-                      class="img-fluid custom-circle-image me-3"
-                      alt=""
-                    />
-
-                    <span
-                      >George,
-                      <strong class="text-muted"
-                        >Digital Art Fashion</strong
-                      ></span
-                    >
-                  </div>
-                </div>
-
-                <div class="slick-testimonial-caption">
-                  <p class="lead">
-                    Over three years in business, We’ve had the chance to work
-                    on a variety of projects, with companies Lorem ipsum dolor
-                    sit amet
-                  </p>
-
-                  <div
-                    class="slick-testimonial-client d-flex align-items-center mt-4"
-                  >
-                    <img
-                      src="images/people/beautiful-woman-face-portrait-brown-background.jpeg"
-                      class="img-fluid custom-circle-image me-3"
-                      alt=""
-                    />
-
-                    <span
-                      >Sandar,
-                      <strong class="text-muted"
-                        >Zoom Fashion Idea</strong
-                      ></span
-                    >
-                  </div>
-                </div>
-
-                <div class="slick-testimonial-caption">
-                  <p class="lead">
-                    Over three years in business, We’ve had the chance to work
-                    on a variety of projects, with companies Lorem ipsum dolor
-                    sit amet
-                  </p>
-
-                  <div
-                    class="slick-testimonial-client d-flex align-items-center mt-4"
-                  >
-                    <img
-                      src="images/people/portrait-british-woman.jpeg"
-                      class="img-fluid custom-circle-image me-3"
-                      alt=""
-                    />
-
-                    <span
-                      >Marie,
-                      <strong class="text-muted"
-                        >Art Fashion Design</strong
-                      ></span
-                    >
-                  </div>
-                </div>
-
-                <div class="slick-testimonial-caption">
-                  <p class="lead">
-                    Over three years in business, We’ve had the chance to work
-                    on a variety of projects, with companies Lorem ipsum dolor
-                    sit amet
-                  </p>
-
-                  <div
-                    class="slick-testimonial-client d-flex align-items-center mt-4"
-                  >
-                    <img
-                      src="images/people/woman-wearing-mask-face-closeup-covid-19-green-background.jpeg"
-                      class="img-fluid custom-circle-image me-3"
-                      alt=""
-                    />
-
-                    <span
-                      >Catherine,
-                      <strong class="text-muted">Dress Fashion</strong></span
-                    >
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
