--- a/faq.html
+++ b/faq.html
@@ -58,7 +58,7 @@ https://www.tooplate.com/view/2127-little-fashion
           </button>
 
           <a class="navbar-brand" href="index.html">
-            <strong><span>Little</span> Fashion</strong>
+            <strong><span>Smart</span> Trade</strong>
           </a>
 
           <div class="d-lg-none">
@@ -70,15 +70,15 @@ https://www.tooplate.com/view/2127-little-fashion
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Inicio</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="about.html">Story</a>
+                <a class="nav-link" href="about.html">Historia</a>
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="products.html">Products</a>
+                <a class="nav-link" href="products.html">Productos</a>
               </li>
 
               <li class="nav-item">
@@ -86,7 +86,7 @@ https://www.tooplate.com/view/2127-little-fashion
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="contact.html">Contacto</a>
               </li>
             </ul>
 
@@ -107,9 +107,9 @@ https://www.tooplate.com/view/2127-little-fashion
             <div class="col-lg-10 col-12">
               <h1>
                 <span class="d-block text-primary"
-                  >Your favorite questions</span
+                  >Las preguntas más frecuentes</span
                 >
-                <span class="d-block text-dark">and our answers to them</span>
+                <span class="d-block text-dark">y nuestras respuestas</span>
               </h1>
             </div>
           </div>
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2127-little-fashion
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-12">
-              <h2>General Info.</h2>
+              <h2>Información General</h2>
 
               <div class="accordion" id="accordionGeneral">
                 <div class="accordion-item">
@@ -133,7 +133,7 @@ https://www.tooplate.com/view/2127-little-fashion
                       aria-expanded="true"
                       aria-controls="accordionGeneralOne"
                     >
-                      What is this Little Fashion?
+                      Qué es Smart Trade?
                     </button>
                   </h2>
 
@@ -145,156 +145,11 @@ https://www.tooplate.com/view/2127-little-fashion
                   >
                     <div class="accordion-body">
                       <p class="large-paragraph">
-                        <strong>Little Fashion</strong> is free Bootstrap 5
-                        website template for everyone. There are 8 HTML pages
-                        included in this template and you can expand more pages
-                        as you need.
-                      </p>
-
-                      <p class="large-paragraph">
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        <strong>Smart Trade</strong> es una tienda que vende
+                        para todos.
                       </p>
                     </div>
                   </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingTwo">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#accordionGeneralTwo"
-                      aria-expanded="false"
-                      aria-controls="accordionGeneralTwo"
-                    >
-                      What is Tooplate website?
-                    </button>
-                  </h2>
-
-                  <div
-                    id="accordionGeneralTwo"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingTwo"
-                    data-bs-parent="#accordionGeneral"
-                  >
-                    <div class="accordion-body">
-                      <p class="large-paragraph">
-                        <a
-                          href="https://www.tooplate.com/free-templates"
-                          target="_blank"
-                          >Tooplate</a
-                        >
-                        is a great website to download free HTML website
-                        templates for your business or personal use. Tooplate
-                        website has been online for almost 8 years now. Thank
-                        you for visiting our website.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingThree">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#accordionGeneralThree"
-                      aria-expanded="false"
-                      aria-controls="accordionGeneralThree"
-                    >
-                      How do I support your website?
-                    </button>
-                  </h2>
-
-                  <div
-                    id="accordionGeneralThree"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingThree"
-                    data-bs-parent="#accordionGeneral"
-                  >
-                    <div class="accordion-body">
-                      <p class="large-paragraph">
-                        You can support our Tooplate website by sharing it to
-                        your friends or colleagues on the web or social media.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <h2 class="mt-5">About <span>our products</span></h2>
-
-              <div class="accordion" id="accordionProduct">
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingFour">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#accordionProductOne"
-                      aria-expanded="true"
-                      aria-controls="accordionProductOne"
-                    >
-                      What is Fashion Design?
-                    </button>
-                  </h2>
-
-                  <div
-                    id="accordionProductOne"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingFour"
-                    data-bs-parent="#accordionProduct"
-                  >
-                    <div class="accordion-body">
-                      <p class="large-paragraph">
-                        <strong>Lorem ipsum dolor</strong> sit amet, consectetur
-                        adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Quis ipsum suspendisse
-                        ultrices gravida. Risus commodo viverra maecenas
-                        accumsan lacus vel facilisis.
-                      </p>
-
-                      <p class="large-paragraph">
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="accordion-item">
-                  <h2 class="accordion-header" id="headingFive">
-                    <button
-                      class="accordion-button collapsed"
-                      type="button"
-                      data-bs-toggle="collapse"
-                      data-bs-target="#accordionProductTwo"
-                      aria-expanded="false"
-                      aria-controls="accordionProductTwo"
-                    >
-                      How do I use the product?
-                    </button>
-                  </h2>
-
-                  <div
-                    id="accordionProductTwo"
-                    class="accordion-collapse collapse"
-                    aria-labelledby="headingFive"
-                    data-bs-parent="#accordionProduct"
-                  >
-                    <div class="accordion-body">
-                      <p class="large-paragraph">
-                        Lorem ipsum is placeholder text commonly used in the
-                        graphic, print, and publishing industries for previewing
-                        layouts and visual mockups.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
